@@ -3,6 +3,8 @@ Changes to Version 2.0-9
     o  scatterplot makes parallel boxplots, calling Boxplot, when x is a factor.
     
     o  mmps (marginal model plots) works better with mulitdimensinal terms like splines and polynomials, and permits plotting against terms in the data frame but not in the model formula.  AsIs argument removed.
+    
+    o  residualPlots handles matrix-predictors similarly to mmps, above.
 
 Changes to Version 2.0-8
 
